Wed Apr  5 00:38:15 CEST 2006 (tk)
----------------------------------
  * libclamav/zziplib: fix possible crash on FreeBSD
		       Reported by Robert Rebbun <robert*desertsurf.com>

Wed Mar 29 15:45:03 CEST 2006 (tk)
----------------------------------
  * libclamav/scanners.c: properly report archive unpacking errors
			  Problem spotted by David F. Skoll
			  <dfs*roaringpenguin.com>

Sun Mar 26 22:33:42 CEST 2006 (tk)
----------------------------------
  * clamd/session.c: remove static timeout (5s) for SESSION
		     Pointed out by Joseph Benden <joe*thrallingpenguin.com>

Sat Mar 25 21:29:25 CET 2006 (tk)
---------------------------------
  * shared/output.c: fix bug reported by Alch <alch*users.sourceforge.net>
		     and improve string handling

Sat Mar 25 17:35:30 CET 2006 (tk)
---------------------------------
  * sigtool/sigtool.c: fix possible crash in build(), thanks to Sven

Sat Mar 25 01:05:50 CET 2006 (tk)
---------------------------------
  * libclamav: optimise scanning of SFX archives

Wed Mar 22 19:04:15 CET 2006 (tk)
---------------------------------
  * libclamav/htmlnorm.c: fix typo spotted by Gianluigi Tiesi
			  <sherpya*netfarm.it>

Wed Mar 22 18:44:25 CET 2006 (tk)
---------------------------------
  * shared/output.c: properly handle return value of vsnprintf
		     Thanks to Anton Yuzhaninov <citrin*rambler-co.ru>

Wed Mar 22 13:14:52 CET 2006 (tk)
---------------------------------
  * docs/man: multiple manpage typo fixes (patch by A. Costa <agcosta*gis.net>)

Mon Mar 20 21:56:38 CET 2006 (acab)
-----------------------------------
  * libclamav/fsg.c: fix wrong write size calculation (reported by Andrey J.
  				Melnikoff (TEMHOTA) <temnota*kmv.ru>)

Sun Mar 19 21:49:19 CET 2006 (tk)
---------------------------------
  * freshclam: fix support for LocalIPAddress (patch by Anton Yuzhaninov
	       <citrin*citrin.ru>)

Tue Mar 14 11:40:49 GMT 2006 (njh)
----------------------------------